--- a/src/Header.css
+++ b/src/Header.css
@@ -1,31 +1,29 @@
-.header{
-    display:flex;
+.header {
+    display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
-}
-
-.header_left{
-    display:flex;
-    flex: 0.6;
-    min-width: 70px;
-    background-color: white;
-    color: grey;
-    border-radius: 30px;
-    padding:10px;
-    align-items: center;
-}
-
-.header_left input{
-    border:none;
-    width: 100%;
-}
-
-.header_right{
+  }
+  
+  .header__right {
     display: flex;
     align-items: center;
-}
-
-.header_right h4{
-    flex: 0.4;
-    margin-left:10px;
-}
+  }
+  
+  .header__left {
+    flex: 0.5;
+    display: flex;
+    background-color: white;
+    padding: 10px;
+    border-radius: 30px;
+    color: gray;
+    align-items: center;
+  }
+  
+  .header__left > input {
+    border: none;
+    width: 100%;
+  }
+  
+  .header__right > h4 {
+    margin-left: 10px;
+  }
