--- a/src/SongRow.css
+++ b/src/SongRow.css
@@ -3,30 +3,31 @@
     padding: 20px;
     display: flex;
     align-items: center;
-    color:white;
-}
-
-.songRow:hover{
+    z-index: 100;
+    color: white;
+  }
+  
+  .songRow:hover {
     cursor: pointer;
     background-color: black;
     opacity: 0.8;
-}
-
-.songRow_info {
+  }
+  
+  .songRow__info {
     margin-left: 20px;
-}
-
-.songRow_info h1{
-    font-size: 16px
-}
-
-.songRow_info p{
+  }
+  
+  .songRow__info > h1 {
+    font-size: 16px;
+  }
+  
+  .songRow__info > p {
     font-size: 14px;
     margin-top: 3px;
     color: gray;
-}
-
-.songRow_album{
+  }
+  
+  .songRow__album {
     height: 40px;
-    width:40px;
-}
+    width: 40px;
+  }
